--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,14 @@ plugins {
     id 'org.jetbrains.kotlin.plugin.serialization' version '1.3.70'
     id 'nu.studer.jooq' version '4.1'
     id "org.flywaydb.flyway" version "6.4.1"
+    id 'com.github.johnrengelman.shadow' version '6.0.0'
+    id "de.undercouch.download" version "4.1.1"
 }
+
+apply plugin: 'application'
+apply plugin: 'com.github.johnrengelman.shadow'
+
+mainClassName = 'nec.gui.NecApp'
 
 group 'org.example'
 version '1.0-SNAPSHOT'
@@ -38,34 +45,69 @@ dependencies {
     compile group: 'io.projectreactor', name: 'reactor-core', version: '3.3.7.RELEASE'
     compile "com.github.shadskii:reactorfx:2.0.0"
 
-//    implementation 'org.koin:koin-core:2.1.5'
-
     implementation group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.30'
     implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.30'
 
     // https://mvnrepository.com/artifact/org.jetbrains.kotlinx/kotlinx-serialization-runtime
     implementation group: 'org.jetbrains.kotlinx', name: 'kotlinx-serialization-runtime', version: '0.20.0-1.4-M3'
-//    implementation group: 'org.jetbrains.kotlinx', name: 'kotlinx-serialization-runtime', version: '0.20.0-1.4.0-rc-95'
-
-//    implementation "com.fasterxml.jackson.module:jackson-module-kotlin:2.11.1"
-//    implementation "com.fasterxml.jackson.core:jackson-core:2.11.1"
 
     // db
     implementation group: 'org.xerial', name: 'sqlite-jdbc', version: '3.30.1'
     jooqRuntime group: 'org.xerial', name: 'sqlite-jdbc', version: '3.30.1'
     implementation 'org.jooq:jooq:3.13.1'
-    implementation 'org.jooq:jooq-meta:3.13.1'
-    implementation 'org.jooq:jooq-codegen:3.13.1'
     implementation 'org.flywaydb:flyway-core:6.4.1'
-
-    compile group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
 
     // https://mvnrepository.com/artifact/org.jgrapht/jgrapht-core
     compile group: 'org.jgrapht', name: 'jgrapht-core', version: '1.4.0'
 
-    compile files('libs/protobuf.jar')
-    compile files('libs/com.google.ortools.jar')
+    // https://mvnrepository.com/artifact/net.java.dev.jna/jna-platform
+    compile group: 'net.java.dev.jna', name: 'jna-platform', version: '5.6.0'
+    // https://mvnrepository.com/artifact/net.java.dev.jna/jna
+    compile group: 'net.java.dev.jna', name: 'jna', version: '5.6.0'
+
+    // https://mvnrepository.com/artifact/com.google.protobuf/protobuf-java
+    compile group: 'com.google.protobuf', name: 'protobuf-java', version: '3.12.2'
+
+    compile files('libs/ortools-java-7.7.7810.jar')
+    compile files('libs/ortools-linux-x86-64-7.7.7810.jar')
+    compile files('libs/ortools-darwin-7.7.7810.jar')
+    compile files('libs/ortools-win32-x86-64-7.7.7810.jar')
 }
+
+def orToolsDest = './libs'
+task downloadOrTools(type: Download) {
+    src([
+            'https://github.com/google/or-tools/releases/download/v7.7/java_win.zip',
+            'https://github.com/google/or-tools/releases/download/v7.7/java_osx.zip',
+            'https://github.com/google/or-tools/releases/download/v7.7/java_linux.tar.gz'
+    ])
+    dest orToolsDest
+    overwrite false
+}
+task unpackOrToolsWin(dependsOn: downloadOrTools, type: Copy) {
+    from zipTree("${downloadOrTools.dest}/java_win.zip")
+    exclude "**/*-sources.jar", "**/*-javadoc.jar"
+    into downloadOrTools.dest
+    eachFile {
+        path = name
+    }
+    includeEmptyDirs = false
+}
+task unpackOrToolsOsx(dependsOn: downloadOrTools, type: Copy) {
+    from zipTree("${downloadOrTools.dest}/java_osx.zip")
+    exclude "**/*-sources.jar", "**/*-javadoc.jar"
+    into downloadOrTools.dest
+    eachFile {
+        path = name
+    }
+    includeEmptyDirs = false
+}
+task unpackOrToolsLinux(dependsOn: downloadOrTools, type: Copy) {
+    from tarTree(resources.gzip("${downloadOrTools.dest}/java_linux.tar.gz"))
+    exclude "*-sources.jar", "**/*-javadoc.jar"
+    into downloadOrTools.dest
+}
+task unpackOrTools(dependsOn: [downloadOrTools, unpackOrToolsWin, unpackOrToolsOsx, unpackOrToolsLinux])
 
 compileKotlin {
     kotlinOptions.jvmTarget = "1.8"
@@ -114,3 +156,6 @@ jooq {
         }
     }
 }
+
+generateNecJooqSchemaSource.dependsOn flywayMigrate
+compileKotlin.dependsOn generateNecJooqSchemaSource, unpackOrTools
