--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ buildscript {
 }
 
 plugins {
-    id 'org.jetbrains.kotlin.jvm' version '1.4-M3'
+    id 'org.jetbrains.kotlin.jvm' version '1.4.0-rc'
     id 'org.jetbrains.kotlin.plugin.serialization' version '1.3.70'
     id 'nu.studer.jooq' version '4.1'
     id "org.flywaydb.flyway" version "6.4.1"
@@ -49,7 +49,7 @@ dependencies {
     implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.30'
 
     // https://mvnrepository.com/artifact/org.jetbrains.kotlinx/kotlinx-serialization-runtime
-    implementation group: 'org.jetbrains.kotlinx', name: 'kotlinx-serialization-runtime', version: '0.20.0-1.4-M3'
+    implementation group: 'org.jetbrains.kotlinx', name: 'kotlinx-serialization-runtime', version: '1.0-M1-1.4.0-rc'
 
     // db
     implementation group: 'org.xerial', name: 'sqlite-jdbc', version: '3.30.1'
