--- a/build.gradle
+++ b/build.gradle
@@ -18,13 +18,17 @@ plugins {
     id "de.undercouch.download" version "4.1.1"
 }
 
+static def getCommitHash() {
+    'git rev-parse --verify --short HEAD'.execute().text.trim()
+}
+
 apply plugin: 'application'
 apply plugin: 'com.github.johnrengelman.shadow'
 
 mainClassName = 'nec.gui.NecApp'
 
 group 'nec'
-version '1.0-SNAPSHOT'
+version "0.1.0-${getCommitHash()}"
 
 repositories {
     maven { url 'https://dl.bintray.com/kotlin/kotlin-eap' }
