--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ buildscript {
 
 plugins {
     id 'org.jetbrains.kotlin.jvm' version '1.4.0-rc'
-    id 'org.jetbrains.kotlin.plugin.serialization' version '1.3.70'
+    id 'org.jetbrains.kotlin.plugin.serialization' version '1.4.0-rc'
     id 'nu.studer.jooq' version '4.1'
     id "org.flywaydb.flyway" version "6.4.1"
     id 'com.github.johnrengelman.shadow' version '6.0.0'
